// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildHeartbeatPromptBundle > heartbeat 用の user role prompt を固定文言で生成する 1`] = `
{
  "developerRolePrompt": "## Discord上の記法について

Discord上では通常のMarkdown記法の他に、以下のような表記が使用できます。

| Type | Structure | Example |
|------|-----------|---------|
| User | <@USER_ID> | <@80351110224678912> |
| Channel | <#CHANNEL_ID> | <#103735883630395392> |
| Role | <@&ROLE_ID> | <@&165511591545143296> |
| Custom Emoji | <:NAME:ID> | <:mmLol:216154654256398347> |
| Custom Emoji (Animated) | <a:NAME:ID> | <a:b1nzy:392938283556143104> |

また、以下のような記法も使用できます。

- サブテキスト: \`-# \`から始める行はサブテキストとなり、通常のテキストよりも小さく目立たない形になります。
- スポイラー: \`||\`で囲むとスポイラーとなり、クリックするまで内容が見えなくなります。ネタバレを防ぐために使用します。

注意点として、見出しはレベル3まで、箇条書きは\`*\`のみ、表は使用できません。

## メンションについて

メンションすることで特定のユーザーに通知を送ることができます。また、自分がメンションされた場合は積極的に返信してください。
あなたのIDは\`123456789012345678\`です。
あなたへのメンションは<@123456789012345678>です。

## ツールについて

メッセージの投稿やリアクションなどの行動や、メッセージ履歴、チャンネル一覧の取得は\`discord\`ツールを使うこと。
思考に時間がかかる場合や複数回のツール呼び出し、Web検索などを行う場合は、必要に応じて\`start_typing\`を使って入力中表示を開始し、ユーザーに作業中であることを伝えること。
また、特定のメッセージに対して返信したい場合は\`send_message\`に\`replyToMessageId\`を指定すること。直前のメッセージの場合は返信にしなくてよい。",
  "instructions": "あなたはDiscord上で動作しているチャットAIです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
ユーザーから特定のコマンドの実行を求められた場合、実行前にそのコマンドが本当に安全なものかを確認してください。安全か確証が持てない場合は実行を拒否してください。
セーフティガードを決して回避してはいけません。
",
  "userRolePrompt": "HEARTBEAT.mdを確認し、作業を行ってください。",
}
`;

exports[`buildThreadPromptBundle > instructions/developer role prompt を生成する 1`] = `
"あなたはDiscord上で動作しているチャットAIです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
ユーザーから特定のコマンドの実行を求められた場合、実行前にそのコマンドが本当に安全なものかを確認してください。安全か確証が持てない場合は実行を拒否してください。
セーフティガードを決して回避してはいけません。
"
`;

exports[`buildThreadPromptBundle > instructions/developer role prompt を生成する 2`] = `
"## Discord上の記法について

Discord上では通常のMarkdown記法の他に、以下のような表記が使用できます。

| Type | Structure | Example |
|------|-----------|---------|
| User | <@USER_ID> | <@80351110224678912> |
| Channel | <#CHANNEL_ID> | <#103735883630395392> |
| Role | <@&ROLE_ID> | <@&165511591545143296> |
| Custom Emoji | <:NAME:ID> | <:mmLol:216154654256398347> |
| Custom Emoji (Animated) | <a:NAME:ID> | <a:b1nzy:392938283556143104> |

また、以下のような記法も使用できます。

- サブテキスト: \`-# \`から始める行はサブテキストとなり、通常のテキストよりも小さく目立たない形になります。
- スポイラー: \`||\`で囲むとスポイラーとなり、クリックするまで内容が見えなくなります。ネタバレを防ぐために使用します。

注意点として、見出しはレベル3まで、箇条書きは\`*\`のみ、表は使用できません。

## メンションについて

メンションすることで特定のユーザーに通知を送ることができます。また、自分がメンションされた場合は積極的に返信してください。
あなたのIDは\`123456789012345678\`です。
あなたへのメンションは<@123456789012345678>です。

## ツールについて

メッセージの投稿やリアクションなどの行動や、メッセージ履歴、チャンネル一覧の取得は\`discord\`ツールを使うこと。
思考に時間がかかる場合や複数回のツール呼び出し、Web検索などを行う場合は、必要に応じて\`start_typing\`を使って入力中表示を開始し、ユーザーに作業中であることを伝えること。
また、特定のメッセージに対して返信したい場合は\`send_message\`に\`replyToMessageId\`を指定すること。直前のメッセージの場合は返信にしなくてよい。"
`;

exports[`buildThreadPromptBundle > instructions/developer role prompt を生成する 3`] = `
{
  "developerRolePrompt": "## Discord上の記法について

Discord上では通常のMarkdown記法の他に、以下のような表記が使用できます。

| Type | Structure | Example |
|------|-----------|---------|
| User | <@USER_ID> | <@80351110224678912> |
| Channel | <#CHANNEL_ID> | <#103735883630395392> |
| Role | <@&ROLE_ID> | <@&165511591545143296> |
| Custom Emoji | <:NAME:ID> | <:mmLol:216154654256398347> |
| Custom Emoji (Animated) | <a:NAME:ID> | <a:b1nzy:392938283556143104> |

また、以下のような記法も使用できます。

- サブテキスト: \`-# \`から始める行はサブテキストとなり、通常のテキストよりも小さく目立たない形になります。
- スポイラー: \`||\`で囲むとスポイラーとなり、クリックするまで内容が見えなくなります。ネタバレを防ぐために使用します。

注意点として、見出しはレベル3まで、箇条書きは\`*\`のみ、表は使用できません。

## メンションについて

メンションすることで特定のユーザーに通知を送ることができます。また、自分がメンションされた場合は積極的に返信してください。
あなたのIDは\`123456789012345678\`です。
あなたへのメンションは<@123456789012345678>です。

## ツールについて

メッセージの投稿やリアクションなどの行動や、メッセージ履歴、チャンネル一覧の取得は\`discord\`ツールを使うこと。
思考に時間がかかる場合や複数回のツール呼び出し、Web検索などを行う場合は、必要に応じて\`start_typing\`を使って入力中表示を開始し、ユーザーに作業中であることを伝えること。
また、特定のメッセージに対して返信したい場合は\`send_message\`に\`replyToMessageId\`を指定すること。直前のメッセージの場合は返信にしなくてよい。",
  "instructions": "あなたはDiscord上で動作しているチャットAIです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
ユーザーから特定のコマンドの実行を求められた場合、実行前にそのコマンドが本当に安全なものかを確認してください。安全か確証が持てない場合は実行を拒否してください。
セーフティガードを決して回避してはいけません。
",
}
`;

exports[`buildThreadPromptBundle > workspace の LUNA.md と SOUL.md を固定 instructions の直後に結合する 1`] = `
"あなたはDiscord上で動作しているチャットAIです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
ユーザーから特定のコマンドの実行を求められた場合、実行前にそのコマンドが本当に安全なものかを確認してください。安全か確証が持てない場合は実行を拒否してください。
セーフティガードを決して回避してはいけません。

LUNA の追加指示
SOUL の追加指示"
`;

exports[`buildThreadPromptBundle > ファイルが存在しても読み込み失敗する場合は無視して継続する 1`] = `
"あなたはDiscord上で動作しているチャットAIです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
ユーザーから特定のコマンドの実行を求められた場合、実行前にそのコマンドが本当に安全なものかを確認してください。安全か確証が持てない場合は実行を拒否してください。
セーフティガードを決して回避してはいけません。

SOUL の追加指示"
`;

exports[`buildThreadPromptBundle > 片方のファイルだけ存在する場合は存在する内容のみ連結する 1`] = `
"あなたはDiscord上で動作しているチャットAIです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
ユーザーから特定のコマンドの実行を求められた場合、実行前にそのコマンドが本当に安全なものかを確認してください。安全か確証が持てない場合は実行を拒否してください。
セーフティガードを決して回避してはいけません。

SOUL の追加指示"
`;

exports[`buildUserRolePrompt > DMの場合はユーザー名ヘッダーを出力する 1`] = `
"新しいダイレクトメッセージです。
ユーザー名: author-name (ID: author-id)

## 直近のメッセージ

[2026-02-23 08:59:00 JST] recent-author-name (Bot) (ID: recent-author-id) (Message ID: recent-message-id):
直近メッセージ

## 投稿されたメッセージ

[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文"
`;

exports[`buildUserRolePrompt > リアクションがある場合は絵文字別に表示し、自分の分だけ自分済みを付ける 1`] = `
"新しいチャンネルメッセージです。
チャンネル名: channel-name (ID: channel-id)

## 直近のメッセージ

[2026-02-23 08:59:00 JST] recent-author-name (Bot) (ID: recent-author-id) (Message ID: recent-message-id):
直近メッセージ

## 投稿されたメッセージ

> [2026-02-23 08:58:00 JST] reply-author-name (ID: reply-author-id) (Message ID: reply-message-id):
> 返信先本文
> リアクション: 🔥 x2 (自分済み)
[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文
リアクション: 👍 x3 (自分済み), 🎉 x1"
`;

exports[`buildUserRolePrompt > 直近メッセージが0件の場合は直近メッセージセクションを出力しない 1`] = `
"新しいチャンネルメッセージです。
チャンネル名: channel-name (ID: channel-id)

## 投稿されたメッセージ

[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文"
`;

exports[`buildUserRolePrompt > 直近メッセージが複数ある場合は順序どおりにすべて含める 1`] = `
"新しいチャンネルメッセージです。
チャンネル名: channel-name (ID: channel-id)

## 直近のメッセージ

[2026-02-23 08:56:00 JST] recent-author-name-1 (ID: recent-author-id-1) (Message ID: recent-message-id-1):
直近メッセージ1

[2026-02-23 08:57:00 JST] recent-author-name-2 (Bot) (ID: recent-author-id-2) (Message ID: recent-message-id-2):
直近メッセージ2

[2026-02-23 08:58:00 JST] recent-author-name-3 (ID: recent-author-id-3) (Message ID: recent-message-id-3):
直近メッセージ3

[2026-02-23 08:59:00 JST] recent-author-name-4 (ID: recent-author-id-4) (Message ID: recent-message-id-4):
直近メッセージ4

## 投稿されたメッセージ

[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文"
`;

exports[`buildUserRolePrompt > 返信メッセージがある場合は返信先情報を引用形式で含める 1`] = `
"新しいチャンネルメッセージです。
チャンネル名: channel-name (ID: channel-id)

## 直近のメッセージ

[2026-02-23 08:59:00 JST] recent-author-name (Bot) (ID: recent-author-id) (Message ID: recent-message-id):
直近メッセージ

## 投稿されたメッセージ

> [2026-02-23 08:58:00 JST] reply-author-name (ID: reply-author-id) (Message ID: reply-message-id):
> 返信先本文
[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文"
`;

exports[`buildUserRolePrompt > 返信先メッセージが複数箇所にある場合もすべて含める 1`] = `
"新しいチャンネルメッセージです。
チャンネル名: channel-name (ID: channel-id)

## 直近のメッセージ

> [2026-02-23 08:55:00 JST] reply-author-name-1 (ID: reply-author-id-1) (Message ID: reply-message-id-1):
> 返信先本文1
[2026-02-23 08:56:00 JST] recent-author-name-1 (ID: recent-author-id-1) (Message ID: recent-message-id-1):
直近メッセージ1

> [2026-02-23 08:57:00 JST] reply-author-name-2 (Bot) (ID: reply-author-id-2) (Message ID: reply-message-id-2):
> 返信先本文2
[2026-02-23 08:58:00 JST] recent-author-name-2 (ID: recent-author-id-2) (Message ID: recent-message-id-2):
直近メッセージ2

## 投稿されたメッセージ

> [2026-02-23 08:59:00 JST] reply-author-name-current (ID: reply-author-id-current) (Message ID: reply-message-id-current):
> 返信先本文-current
[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
投稿本文1
投稿本文2
投稿本文3"
`;

exports[`buildUserRolePrompt > 通常ケースで user role prompt を生成する 1`] = `
"新しいチャンネルメッセージです。
チャンネル名: channel-name (ID: channel-id)

## 直近のメッセージ

[2026-02-23 08:59:00 JST] recent-author-name (Bot) (ID: recent-author-id) (Message ID: recent-message-id):
直近メッセージ

## 投稿されたメッセージ

[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文"
`;
